# pallettizatore

./: .gitignore  README.md  pyproject.toml
data/: seed_data.json
kompongo/: __init__.py  cli.py  collisions.py  exporter.py  models.py  planner.py  project.py  repository.py  sequence.py  snap.py
tests/: test_annotations.py  test_approach.py  test_cli.py  test_exporter.py  test_gui.py  test_metrics.py  test_planner.py  test_plc.py  test_project.py  test_repository.py  test_sequence.py
verpal/: __init__.py  annotations.py  approach.py  cli.py  collisions.py  exporter.py  gripper.py  gui.py  metrics.py  models.py  planner.py  plc.py  project.py  quote.py  render3d.py  repository.py  sequence.py  viewer.py
